[tool.poetry]
name = "hospital-backend"
version = "0.1.0"
description = "Hospital recommendation API"
authors = ["Your Name tareq"]
readme = "README.md"
packages = []
py-modules = ["server"]  # শুধু server.py module include করা হবে

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = ">=0.120.2"
google-search-results = ">=2.4.2"
joblib = ">=1.5.2"
pandas = ">=2.3.3"
pymongo = ">=4.15.3"
python-dotenv = ">=1.2.1"
requests = ">=2.32.5"
scikit-learn = ">=1.7.2"
uvicorn = ">=0.38.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
